Resolves: MTV-4628 | Fix plan table cell spacing (#2286)
* Resolves: MTV-4628 | Fix plan table cell spacing


* Resolves: MTV-4628 | address feedback


---------

--- a/src/plans/list/components/PlanRowFields/PlanStatus/PlanStatus.style.scss
+++ b/src/plans/list/components/PlanRowFields/PlanStatus/PlanStatus.style.scss
@@ -1,3 +1,3 @@
 .plan-status-cell-label-section {
-  width: 100px;
+  white-space: nowrap;
 }
